@@ -45,7 +45,7 @@
 
   <properties>
     <springboot.version>2.5.3</springboot.version>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <junit.version>5.7.2</junit.version>
     <jacoco.version>0.8.7</jacoco.version>
     <skip.integration.tests>true</skip.integration.tests>
@@ -58,6 +58,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.scm.id>ONS</project.scm.id>
     <testcontainers.version>1.16.2</testcontainers.version>
+    <lombok.version>1.18.22</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -337,7 +338,7 @@
         <plugin>
           <groupId>com.coveo</groupId>
           <artifactId>fmt-maven-plugin</artifactId>
-          <version>2.9.1</version>
+          <version>2.13</version>
           <executions>
             <execution>
               <goals>
@@ -441,7 +442,7 @@
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks>
               <argLine>
-                ${surefireArgLine} --illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED
+                ${surefireArgLine} --add-opens java.base/java.lang=ALL-UNNAMED
               </argLine>
             <systemPropertyVariables>
               <java.util.logging.config.file>src/test/resources/junit-logging.properties</java.util.logging.config.file>
